--- a/index.html
+++ b/index.html
@@ -3,40 +3,38 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hungry Monster</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <title>Cooking Master</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <div class="container text-center" style="margin-top: 20px;">
-        <input type="text" id="customeInput" placeholder="write your item and search">
-        <button id="search"> search</button>
-    </div>
 
-    <div class="container" style="margin-top: 20px;">
+    <main class="container">
+        <div class="input-group mb-3 mt-5">
+            <input type="text" class="form-control" id="customeInput" placeholder="Search for Meel...">
+            <button class="input-group-text" id="basic-addon2">Search</button>
+        </div>
         <div class="row" id="row">
+
+        </div>
+        <div id="popup">
+            
         </div>
 
-    </div>
 
-    <div class="container">
-
-        <div class="text-center text-center">
-            <div class="text-center">
-                <div id="details" class="box" style=" position: absolute; top: 100px;left:30%;margin: auto;height: auto;width: 40%; background-color:rgba(26, 188, 156,1.0);">
-
-                </div>
-            </div>
-        </div>
-
-    </div>
+    </main>
 
 
-    <script src="script.js "></script>
 
+
+
+
+
+    <script src="js/bootstrap.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
